k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gymit-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gymit-api
  template:
    metadata:
      labels:
        app: gymit-api
    spec:
      containers:
        - name: api
          image: ghcr.io/vdflyapota/gymit:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
