k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gymit-api
spec:
  selector:
    app: gymit-api
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
